--- a/bootloader/pom.xml
+++ b/bootloader/pom.xml
@@ -3,6 +3,8 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  <packaging>jar</packaging>
+  
   <parent>
     <groupId>dxc.microservice.quarkus</groupId>
     <artifactId>quarkus-hexagonal</artifactId>
@@ -18,28 +20,7 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-config-yaml</artifactId>
-    </dependency>
-
-    <!-- Junit 5 testing -->
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-junit5</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Adds mockito framework for testing purposes -->
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-junit5-mockito</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Testing and validating REST services -->
-    <dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <scope>test</scope>
-    </dependency>
+    </dependency>    
 
     <!-- Flyway specific dependencies -->
     <dependency>
@@ -55,7 +36,17 @@
 
     <dependency>
       <groupId>dxc.microservice.quarkus</groupId>
-      <artifactId>infrastructure</artifactId>
+      <artifactId>application</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>dxc.microservice.quarkus</groupId>
+      <artifactId>adapter-rest</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>dxc.microservice.quarkus</groupId>
+      <artifactId>adapter-postgresql</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
