Fix maven configuration problem. Use quarkus-maven-plugin in bootloader and Jandex plugin in the other modules

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -30,4 +30,14 @@
             <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.smallrye</groupId>
+                <artifactId>jandex-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
