Add population mechanism for DynamoDB table in DEV mode

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -33,6 +33,7 @@
 
     <build>
         <plugins>
+            <!-- Jandex plugin needed to use context beans in other modules -->
             <plugin>
                 <groupId>io.smallrye</groupId>
                 <artifactId>jandex-maven-plugin</artifactId>
