--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    
+
     <parent>
         <groupId>dxc.microservice.quarkus</groupId>
         <artifactId>quarkus-hexagonal</artifactId>
@@ -21,8 +21,9 @@
         </dependency>
     </dependencies>
 
-     <build>
+    <build>
         <plugins>
+            <!-- Jandex plugin needed to use context beans in other modules -->
             <plugin>
                 <groupId>io.smallrye</groupId>
                 <artifactId>jandex-maven-plugin</artifactId>
