--- a/infrastructure/adapter-postgresql/pom.xml
+++ b/infrastructure/adapter-postgresql/pom.xml
@@ -76,10 +76,10 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
-        <dependency>
+     <!--    <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
-        </dependency>
+        </dependency> -->
     </dependencies>
 
     <build>
