--- a/infrastructure/adapter-rest/pom.xml
+++ b/infrastructure/adapter-rest/pom.xml
@@ -77,10 +77,10 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
-        <dependency>
+      <!--   <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
-        </dependency>
+        </dependency> -->
     </dependencies>
 
     <build>
