--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
                 <artifactId>mapstruct</artifactId>
                 <version>${org.mapstruct.version}</version>
             </dependency>
+            <!-- <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${org.mapstruct.version}</version>
+            </dependency> -->
         </dependencies>
     </dependencyManagement>
     <build>
@@ -122,7 +127,7 @@
                     </configuration>
                 </plugin>
             </plugins>
-        </pluginManagement>       
+        </pluginManagement>
     </build>
     <modules>
         <module>domain</module>
