--- a/infrastructure/adapter-dynamodb/pom.xml
+++ b/infrastructure/adapter-dynamodb/pom.xml
@@ -59,10 +59,10 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
-      <!--   <dependency>
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
-        </dependency> -->
+        </dependency>
     </dependencies>
 
     <build>
