--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <quarkus.platform.version>2.14.0.Final</quarkus.platform.version>
         <jandex.maven.plugin.version>3.0.1</jandex.maven.plugin.version>
         <lombok.version>1.18.24</lombok.version>
-        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
     </properties>
 
     <dependencyManagement>
@@ -57,11 +57,11 @@
                 <artifactId>mapstruct</artifactId>
                 <version>${org.mapstruct.version}</version>
             </dependency>
-            <!-- <dependency>
+            <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${org.mapstruct.version}</version>
-            </dependency> -->
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
