--- a/infrastructure/adapter-kafka/src/main/resources/application.yml
+++ b/infrastructure/adapter-kafka/src/main/resources/application.yml
@@ -1,22 +1,29 @@
+quarkus:
+  kafka:
+    devservices:
+      topic-partitions:
+        loans-in: 1
+        loans-out: 1
+
+kafka:
+  apicurio:
+    registry:
+      auto-register: true
 
 mp:
   messaging:
     incoming:
       loans-in:
-        connector: smallrye-kafka
-        topic: loans
-#        key:
-#          deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
-#        value:
-#          deserializer: org.apache.kafka.common.serialization.StringDeserializer
+        # connector: smallrye-kafka
+        topic: loans-in
+        # value:
+        #  deserializer: io.apicurio.registry.serde.avro.AvroKafkaDeserializer
     outgoing:
-      prices-out:
-        connector: smallrye-kafka 
-        topic: loans   
-#         key:
-#           serializer: org.apache.kafka.common.serialization.IntegerSerializer
-#         value:
-#           serializer: org.apache.kafka.common.serialization.StringSerializer
+      loans-out:
+        # connector: smallrye-kafka 
+        topic: loans-out   
+        # value:
+        #  serializer: io.apicurio.registry.serde.avro.AvroKafkaSerializer
 
 "%prod":
   kafka:
